--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ clap = { version = "4", features = ["derive"] }
 dirs = "5.0"
 futures = "0.3"
 similar = "2.6"
+regex = "1.11"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
