--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ futures = "0.3"
 similar = "2.6"
 regex = "1.11"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 toml = "0.8"
