--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 jj-lib = { git = "https://github.com/martinvonz/jj.git" }
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4", features = ["derive", "env"] }
 dirs = "5.0"
 futures = "0.3"
 similar = "2.6"
