chore: update changes
The commit message is well-formed and follows Conventional Commits rules. It correctly identifies this as a feature addition to the build configuration and clearly describes the change.

```
feat(build): add binary target configuration for cccjj

Add [[bin]] section to Cargo.toml to explicitly configure the binary
target named "cccjj" pointing to src/main.rs.
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "ccc-jj"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "cccjj"
+path = "src/main.rs"
+
 [dependencies]
 jj-lib = { git = "https://github.com/martinvonz/jj.git" }
 tokio = { version = "1", features = ["full"] }
