refactor(commit): remove subagent definition and simplify prompt configuration
The commit message generator previously used a dedicated subagent with custom instructions and tools. This change removes that agent-based approach and simplifies the configuration to use a direct prompt template instead. The `Agent` struct and related JSON serialization logic have been removed, and the CLI invocation no longer passes agent definitions to the Claude command.

--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -1,19 +1,16 @@
 [generator]
 # Claude CLI configuration for commit message generation
 command = "claude"
-# Claude CLI arguments - using headless mode with subagent definition below
+# Claude CLI arguments - using headless mode with system prompt
 args = ["-p", "--output-format", "text"]
 # Fallback message if generation fails
 default_commit_message = "chore: update changes"
 
-[generator.agent]
-name = "commit-writer"
-description = "Dedicated agent for generating Conventional Commits from jj diffs."
-tools = "Read,Grep"
-prompt = """
-You are a commit message specialist. Generate concise, conventional commit messages that follow best practices.
-
-IMPORTANT: Always generate commit messages in the language specified by the user. If no language is specified, default to English.
+[prompt]
+# A prompt template for generating commit messages
+# Variables to be replaced at run time: {language}, {diff_content}
+template = """
+Generate a Conventional Commit message in {language} for the following diff.
 
 Conventional Commits Format:
 <type>[optional scope]: <description>
@@ -24,46 +21,20 @@ Conventional Commits Format:
 
 Types: feat, fix, refactor, docs, test, chore, style, perf, build, ci
 
-- feat: new feature
-- fix: bug fix
-- refactor: code restructuring without changing behavior
-- docs: documentation changes
-- test: adding or fixing tests
-- chore: maintenance tasks
-- style: code style/formatting changes
-- perf: performance improvements
-- build: build system changes
-- ci: CI/CD changes
-
 Guidelines:
-
 - Title: 50 characters max, imperative mood ("Add feature" not "Added feature")
-- Include scope in parentheses if changes are limited to a specific component (e.g., "feat(auth): add login validation")
-- Add "!" after type/scope for breaking changes (e.g., "feat!: change API signature")
+- Include scope in parentheses if changes are limited to a specific component
+- Add "!" after type/scope for breaking changes
 - Include body only if explanation adds value beyond the title
 - Body: 72 characters per line max, explain WHAT and WHY (not how)
 - Use bullet points for multiple changes or breaking changes
 - For breaking changes, explain migration path in footer with "BREAKING CHANGE:" prefix
 - Prioritize: breaking changes > feat > fix > refactor > others
 - If multiple types, choose the most significant one
-- OUTPUT ONLY THE COMMIT MESSAGE, NO EXPLANATIONS OR EXTRA TEXT
-"""
 
-[prompt]
-# A prompt template for generating commit messages using the commit-writer subagent
-# Variables to be replaced at run time: {language}, {diff_content}
-template = """
-You must collaborate with the `commit-writer` agent to produce the final answer. Follow this process:
+OUTPUT ONLY THE COMMIT MESSAGE. NO EXPLANATIONS, NO COMMENTARY, NO MARKDOWN CODE BLOCKS.
 
-1. Call the `commit-writer` agent with the diff below so it drafts a Conventional Commit message in {language}.
-2. Inspect the draft and fix any issues so it follows the Conventional Commits rules and remains in {language}.
-3. OUTPUT ONLY THE FINAL COMMIT MESSAGE, NO EXPLANATIONS OR EXTRA TEXT.
-
-Share this diff with the agent:
-
-- - -
+Diff:
 
 {diff_content}
-
-- - -
 """
