--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -23,14 +23,13 @@ Types: feat, fix, refactor, docs, test, chore, style, perf, build, ci
 
 Guidelines:
 - Title: 50 characters max, imperative mood ("Add feature" not "Added feature")
-- Include scope in parentheses if changes are limited to a specific component
-- Add "!" after type/scope for breaking changes
-- Include body only if explanation adds value beyond the title
+    - Include scope in parentheses if changes are limited to a specific component
+    - Prioritize: feat > fix > refactor > others
+    - If multiple types, choose the most significant one
 - Body: 72 characters per line max, explain WHAT and WHY (not how)
-- Use bullet points for multiple changes or breaking changes
-- For breaking changes, explain migration path in footer with "BREAKING CHANGE:" prefix
-- Prioritize: breaking changes > feat > fix > refactor > others
-- If multiple types, choose the most significant one
+    - Include body only if explanation adds value beyond the title
+    - Use bullet points for multiple changes or breaking changes
+    - For breaking changes, explain migration path in footer with "BREAKING CHANGE:" prefix
 
 OUTPUT ONLY THE COMMIT MESSAGE. NO EXPLANATIONS, NO COMMENTARY, NO MARKDOWN CODE BLOCKS.
 
