--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,18 @@ path = "src/main.rs"
 
 [dependencies]
 jj-lib = { git = "https://github.com/martinvonz/jj.git" }
-tokio = { version = "1", features = ["full"] }
-anyhow = "1.0"
-clap = { version = "4", features = ["derive", "env"] }
-dirs = "5.0"
-futures = "0.3"
-similar = "2.6"
-regex = "1.11"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-toml = "0.8"
-indicatif = "0.17"
+tokio = { version = "1.48.0", features = ["macros", "io-util", "rt-multi-thread"] }
+anyhow = "1.0.100"
+clap = { version = "4.5.51", features = ["derive", "env"] }
+dirs = "6.0.0"
+futures = "0.3.31"
+similar = "2.7.0"
+regex = "1.12.2"
+serde = { version = "1.0.228", features = ["derive"] }
+toml = "0.9.8"
+indicatif = "0.18.3"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
