--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
 toml = "0.9.8"
 indicatif = "0.18.3"
+gethostname = "0.5.0"
 
 [profile.release]
 lto = true
