--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde = { version = "1.0.228", features = ["derive"] }
 toml = "0.9.8"
 indicatif = "0.18.3"
 gethostname = "0.5.0"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 
 [profile.release]
 lto = true
