feat: add configurable size limits for diff collapsing
Add max_diff_lines and max_diff_bytes thresholds to collapse large diffs
independently of pattern matching. This prevents exceeding LLM context
limits when processing files with excessive changes or binary content.

Files are now collapsed if they match patterns, exceed line counts, or
exceed byte sizes. Collapse reasons are tracked separately for each
categorization to aid debugging.

--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -7,6 +7,13 @@ args = ["-p", "--output-format", "text"]
 default_commit_message = "chore: update changes"
 
 [diff]
+# Files with more changed lines than this threshold are collapsed to a summary
+# Helps avoid exceeding LLM context limits with large file changes
+max_diff_lines = 200
+# Files with diff larger than this byte size are collapsed to a summary
+# Catches edge cases like large SVGs or minified files with few lines
+max_diff_bytes = 16384
+
 # Files matching these patterns show summary only (not full diff)
 # Useful for large generated/vendored files that add noise
 collapse_patterns = [
