--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -14,6 +14,11 @@ max_diff_lines = 2048
 # Catches edge cases like large SVGs or minified files with few lines
 max_diff_bytes = 65535
 
+# Total diff size limits - abort before sending to Claude if exceeded
+# Prevents wasted API calls and cryptic failures on massive diffs
+max_total_diff_lines = 8192
+max_total_diff_bytes = 262144  # 256 KB
+
 # Files matching these patterns show summary only (not full diff)
 # Useful for large generated/vendored files that add noise
 collapse_patterns = [
