--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ indicatif = "0.18.3"
 gethostname = "1.1.0"
 tracing = "0.1.43"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+textwrap = "0.16"
 
 [profile.release]
 lto = true
