fix: instruct Claude to not wrap body text
Text formatting now joins lines within paragraphs (separated by blank
lines) before applying wrapping. This ensures proper handling of multi-
line content while preserving list structure and blank line separation
between paragraphs.

The implementation splits text into paragraphs, joins wrapped lines
within each paragraph, and preserves trailing blank lines. List
detection prevents adjacent list items from being incorrectly joined
into a single paragraph.

--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -68,7 +68,7 @@ Guidelines:
     - Do NOT include scope or component in parentheses
     - Prioritize: feat > fix > refactor > others
     - If multiple types, choose the most significant one
-- Body: 72 characters per line max, explain WHAT and WHY (not how)
+- Body: explain WHAT and WHY (not how), do NOT wrap lines
     - Include body only if explanation adds value beyond the title
     - Use bullet points for multiple changes or breaking changes
     - For breaking changes, explain migration path in footer with "BREAKING CHANGE:" prefix
