--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ccc-jj"
 version = "0.6.2"
 edition = "2024"
+description = "Auto-commit changes in a jj workspace using Claude for commit messages"
 
 [[bin]]
 name = "jc"
