--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ gethostname = "1.1.0"
 tracing = "0.1.43"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 textwrap = "0.16"
+unicode-width = "0.2.2"
 
 [profile.release]
 lto = true
