feat: add colored output for commit information and file changes
Add `colored` and `console` dependencies to enable ANSI color styling in
terminal output. Apply color formatting to commit metadata, file change
indicators, and box borders for improved visual distinction.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ tracing = "0.1.43"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 textwrap = "0.16"
 unicode-width = "0.2.2"
+colored = "3.0.0"
+console = "0.16.2"
 
 [profile.release]
 lto = true
