--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ futures = "0.3.31"
 similar = "2.7.0"
 regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0"
 toml = "0.9.8"
 indicatif = "0.18.3"
 gethostname = "1.1.0"
