--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -1,8 +1,8 @@
 [generator]
 # Claude CLI configuration for commit message generation
 command = "claude"
-# Claude CLI arguments - using headless mode with system prompt
-args = ["-p", "--output-format", "text", "--no-session-persistence"]
+# Claude CLI arguments - using headless mode with structured JSON output
+args = ["-p", "--output-format", "json", "--no-session-persistence"]
 # Fallback message if generation fails
 default_commit_message = "chore: update changes"
 
