--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -64,12 +64,12 @@ Conventional Commits Format:
 Types: feat, fix, refactor, docs, test, chore, style, perf, build, ci
 
 Guidelines:
-- Title: 50 characters max, imperative mood ("Add feature" not "Added feature")
+- Title: 50 characters max, imperative mood ("add feature" not "added feature")
     - Do NOT include scope or component in parentheses
     - Prioritize: feat > fix > refactor > others
     - If multiple types, choose the most significant one
-- Body: explain WHAT and WHY (not how), do NOT wrap lines
-    - Include body only if explanation adds value beyond the title
+- Body: explain WHY the change was needed (motivation, context), not WHAT changed
+    - Include body only if motivation/context isn't obvious from the title
     - Use bullet points for multiple changes or breaking changes
     - For breaking changes, explain migration path in footer with "BREAKING CHANGE:" prefix
 
