--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ textwrap = "0.16"
 unicode-width = "0.2.2"
 colored = "3.0.0"
 console = "0.16.2"
+chrono = "0.4.42"
 
 [profile.release]
 lto = true
