--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -15,10 +15,10 @@ Generate a short, descriptive bookmark (branch) name for the following commits.
 Rules:
 - Use 2-6 lowercase words separated by hyphens (e.g., "add-user-auth", "fix-login-redirect")
 - Each word segment MUST start with a letter, NOT a digit (e.g., "v2-support" not "2-support")
-- Do NOT include version numbers as separate segments (e.g., "update-parser" not "update-parser-0-11-0")
+- Describe WHAT changed, not version numbers (e.g., "update-woff2-converter" not "release-v-zero-eleven")
 - Focus on the single most significant change - do NOT try to cover all changes
 - Be specific but concise
-- Do NOT use dates, ticket numbers, or generic names like "update-code"
+- Do NOT use dates, ticket numbers, version numbers, or generic names like "update-code"
 - Do NOT use prefixes like "feature/", "fix/", etc.
 
 Commits:
