--- a/assets/commit-config.toml
+++ b/assets/commit-config.toml
@@ -89,6 +89,7 @@ Guidelines:
     - Do NOT include scope or component in parentheses
     - Prioritize: feat > fix > refactor > others
     - If multiple types, choose the most significant one
+    - Start with a lower case letter
 - Body: explain WHY the change was needed (motivation, context), not WHAT changed
     - Include body only if motivation/context isn't obvious from the title
     - Use bullet points for multiple changes or breaking changes
